objects/ManualTask__c.object
<CustomObject>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Manual Tasks</relationshipLabel>
        <relationshipName>Manual_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Done?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Manual Tasks</relationshipLabel>
        <relationshipName>ManualTasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Manual Task</label>
    <nameField>
        <displayFormat>MT{00000000}</displayFormat>
        <label>Manual Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>